src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AcctSeed__Account_Payable_Terms__c</fullName>
        <inlineHelpText>Used to calculate default Payable Due Date.</inlineHelpText>
        <label>Payable Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates account is eligible for use in accounting application.</inlineHelpText>
        <label>Accounting Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Type__c</fullName>
        <inlineHelpText>Used in filtered lookups for Payable and Billing screens.</inlineHelpText>
        <label>Accounting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Customer and Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Activity_Statement_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Overrides the default Activity Statement defined in Accounting Settings for this specific Customer.</inlineHelpText>
        <label>Activity Statement Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Activity Statement</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Activity Statement Format)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Alternate_Payee_Name__c</fullName>
        <inlineHelpText>Used to denote alternate name on PDF statements and cash disbursements.</inlineHelpText>
        <label>Alternate Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default for main contact in Accounting Seed Billing, Sales Orders, Payables, and Purchase Orders.</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Days_Due__c</fullName>
        <inlineHelpText>Used to calculate default Billing Due Date.</inlineHelpText>
        <label>Billing Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Discount_Days_Due__c</fullName>
        <inlineHelpText>Used to calculate payment due date for a prompt payment discount on a billing.</inlineHelpText>
        <label>Billing Discount Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Discount_Percent__c</fullName>
        <inlineHelpText>Used to determine the discount off the Billing Total if payment is received within Billing Discount Days Due.</inlineHelpText>
        <label>Billing Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to configure formatting and display of fields in Billing PDF. Overrides the default Billing Format defined in Accounting Settings.</inlineHelpText>
        <label>Billing Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Billing</value>
            </filterItems>
            <infoMessage>The Type must equal &quot;Billing&quot;</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts (Billing Format)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing_Terms_Name__c</fullName>
        <inlineHelpText>The name of the billing terms as you would like them to appear on the invoice.</inlineHelpText>
        <label>Billing Terms Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_Card_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field denotes a credit card vendor. If checked this account will display in the credit card field filtered lookup on the expense object.</inlineHelpText>
        <label>Credit Card Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_1099_Box__c</fullName>
        <inlineHelpText>Informational field used on 1099 reports and file export.</inlineHelpText>
        <label>Default 1099 Box</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Rents</fullName>
                </value>
                <value>
                    <fullName>2. Royalties</fullName>
                </value>
                <value>
                    <fullName>3. Other Income</fullName>
                </value>
                <value>
                    <fullName>4. Federal Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5. Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6. Medical Payments</fullName>
                </value>
                <value>
                    <fullName>7. Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8. Substitute Payments</fullName>
                </value>
                <value>
                    <fullName>10. Crop Insurance</fullName>
                </value>
                <value>
                    <fullName>13. Golden Parachute</fullName>
                </value>
                <value>
                    <fullName>14. Attorney Proceeds</fullName>
                </value>
                <value>
                    <fullName>15a. Section 409A Deferrals</fullName>
                </value>
                <value>
                    <fullName>15b. Section 409A Income</fullName>
                </value>
                <value>
                    <fullName>16. State Tax Withheld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default Expense GL Account used for this Vendor when creating Payable records.</inlineHelpText>
        <label>Default Expense GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>notEqual</operation>
                <value>Cash Flow</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Form_1099_Box__c</fullName>
        <description>This field should be populated with the Default 1099 Form Type Label field and the Default 1099 Box Form Category Label. The format should be &lt;FORM_TYPE_LABEL&gt; - &lt;FORM_CATEGORY_LABEL&gt;</description>
        <inlineHelpText>The default 1099 Form and 1099 Box category to associate with this payee’s cash disbursement payments. Each year review your defaults, and check for any new 1099 Form options to reflect changes by the IRS. Change by selecting Update 1099 Info button.</inlineHelpText>
        <label>Default Form 1099 Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Form_Category_Id__c</fullName>
        <description>External reference to the default Form Category Id used for this account. This field should not be changed manually.</description>
        <externalId>true</externalId>
        <inlineHelpText>The DeveloperName to the default Form Category Id used for this account. This field should not be changed manually.</inlineHelpText>
        <label>Default Form Category Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Days_Due__c</fullName>
        <inlineHelpText>Used to calculate payment due date for a prompt payment discount on an Payable.</inlineHelpText>
        <label>Payable Discount Days Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Percent__c</fullName>
        <inlineHelpText>Used to determine the discount off the Payable Total if payment is made within Payable Discount Days Due.</inlineHelpText>
        <label>Payable Discount %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Entity_Use_Code__c</fullName>
        <description>To exempt an Account from Avalara tax calculation, this field&apos;s value should match the Entity Use code entered for this Account&apos;s exemption in Avalara. Use in conjunction with the Exemption Number field.</description>
        <inlineHelpText>To exempt an Account from Avalara tax calculation, this field&apos;s value should match the Entity Use code entered for this Account&apos;s exemption in Avalara. Use in conjunction with the Exemption Number field.</inlineHelpText>
        <label>Entity Use Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Exemption_Number__c</fullName>
        <description>To exempt an Account from Avalara tax calculation, this field&apos;s value should match the Exemption Number entered for this Account&apos;s exemption in Avalara. Use in conjunction with the Entity Use Code field.</description>
        <inlineHelpText>To exempt an Account from Avalara tax calculation, this field&apos;s value should match the Exemption Number entered for this Account&apos;s exemption in Avalara. Use in conjunction with the Entity Use Code field.</inlineHelpText>
        <label>Exemption Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__File_Import_Match_Name__c</fullName>
        <inlineHelpText>Used to match the vendor account to a specific record in the Bank Direct Connect and Bank Import.</inlineHelpText>
        <label>File Import Match Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Variable 1)</relationshipLabel>
        <relationshipName>AccountsGLAV1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Variable 2)</relationshipLabel>
        <relationshipName>AccountsGLAV2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Accounts (GL Variable 3)</relationshipLabel>
        <relationshipName>AccountsGLAV3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Last_Statement_Sent__c</fullName>
        <inlineHelpText>Indicates when a statement was emailed either from the Account detail&apos;s Create Statement button or Account List View&apos;s Create Outstanding Statements button.</inlineHelpText>
        <label>Last Statement Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Outstanding_Statement_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Overrides the default Outstanding Statement defined in Accounting Settings for this specific Customer.</inlineHelpText>
        <label>Outstanding Statement Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Outstanding Statement</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default for main shipping contact in Accounting Seed Billing, Sales Orders and Purchase Orders</inlineHelpText>
        <label>Shipping Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Shipping Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Statement_Needed__c</fullName>
        <inlineHelpText>A value of &apos;Yes&apos; indicates that Billings have a balance due. This is set to &apos;No&apos; when statements have been emailed or when there are no Billings with a balance due.</inlineHelpText>
        <label>Statement Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Stripe_Customer_Id__c</fullName>
        <inlineHelpText>External identification tag of this customer record in Stripe.</inlineHelpText>
        <label>Stripe Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Taxpayer_Identification_Number__c</fullName>
        <inlineHelpText>Informational field used on 1099 reports and file export.</inlineHelpText>
        <label>Taxpayer Identification Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__VAT_Business_Identification_Number__c</fullName>
        <description>Informational field used for VAT customers when Avalara Tax calculation is enabled. The value entered here populates the Customer VAT Number field on the Avalara transaction.</description>
        <inlineHelpText>Informational field used for VAT customers when Avalara Tax calculation is enabled. The value entered here populates the Customer VAT Number field on the Avalara transaction.</inlineHelpText>
        <label>VAT Business Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__X1099_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Includes disbursements made to this vendor on 1099 reports and file export.</inlineHelpText>
        <label>1099 Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ar_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ar Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Margin %</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BillNPay__LP_Payment_Request_Method__c</fullName>
        <inlineHelpText>Chose whether payment requests should go to a user via email or text message</inlineHelpText>
        <label>AV Payment Request Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__LP_Payment_Request_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Phone__c</fullName>
        <description>To use Bill&amp;Pay from Account an active mobile number must be used.  This is usually used for Person Accounts.  If your Account Phone field typically contains a business land line number, consider processing payments by Contact</description>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Removes mobile phone number formatting from the standard SF Phone field to support search queries.  It is not necessary to display on page layout</inlineHelpText>
        <label>AV Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Status__c</fullName>
        <inlineHelpText>Indicates when Account has been registered as a Bill &amp; Pay user or has been Suspended.
To mass activate Accounts, set multiple accounts to Batch Processing, then run batch job (see Admin Guide)</inlineHelpText>
        <label>AV Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Suspend</fullName>
                </value>
                <value>
                    <fullName>Batch Processing</fullName>
                </value>
                <value>
                    <fullName>Activated From Payments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__T2P_Message_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User has opted out of out of all Bill &amp; Pay text messages.</inlineHelpText>
        <label>AV Text Message Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__T2P_email__c</fullName>
        <inlineHelpText>When using account as the Bill &amp; Pay User (paying consumer), this field may be used for email.  A custom field may also be used by entering the field API name in Payment Request Variables</inlineHelpText>
        <label>AV Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillNPay__Text_Message_Body__c</fullName>
        <description>When text trigger is changed text the message in this field to the Contact. May be used to send invitations, reminders, Account numbers or anything.   You may use a flow to set the Text Body and set the trigger   When text trigger is changed text the message in this field to the Contact. May be used to send invitations, reminders, Account numbers or anything.   You may use a flow to set the Text Body and set the trigger   Content should be short as this will be delivered in a SMS</description>
        <inlineHelpText>Use this field for special text messages to the contact.  Used in conjunction with the Text Trigger field</inlineHelpText>
        <label>Text Message Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillNPay__Text_Trigger__c</fullName>
        <inlineHelpText>When changed, the content in the Text Body field are sent to the customer</inlineHelpText>
        <label>Text Trigger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__authViaAccountId__c</fullName>
        <inlineHelpText>Unique identifier returned from Bill &amp; Pay Server</inlineHelpText>
        <label>AV User ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__auth_code__c</fullName>
        <inlineHelpText>If Bill &amp; Pay is configured to require a verification code be send to a user&apos;s mobile, whereupon they enter that code into a web page, enter a 6 digit code here.    This works with the parameter verify-phone = TRUE</inlineHelpText>
        <label>AV Authorization Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__send_optin_text__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When Account is activated for Bill &amp; Pay, Should the user be sent a Opt In Text Message (see Admin Guide)</inlineHelpText>
        <label>AV Send Opt In Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__send_welcome_email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When Account is activated for Bill &amp; Pay, Should the user be sent a Welcome Email? (see Admin Guide)</inlineHelpText>
        <label>AV Send Welcome Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__send_welcome_text__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When Account is activated for Bill &amp; Pay, Should the user be sent a Welcome Text Message (see Admin Guide)</inlineHelpText>
        <label>AV Send Welcome Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Quotes_Lines_Received_Weightage__c</fullName>
        <formula>if( Customer_Quotes_Lines_Received__c = 0, 0,
if(Customer_Quotes_Lines_Received__c &gt;= 1 &amp;&amp; Customer_Quotes_Lines_Received__c &lt;= 10, 5,
if(Customer_Quotes_Lines_Received__c &gt;=11 &amp;&amp; Customer_Quotes_Lines_Received__c &lt;= 20, 10,
if(Customer_Quotes_Lines_Received__c &gt;=21 &amp;&amp; Customer_Quotes_Lines_Received__c &lt;= 30, 15,
if(Customer_Quotes_Lines_Received__c &gt;= 31, 20, 0)))))</formula>
        <label>Customer Quotes Lines Received Weightage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Quotes_Lines_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Quotes Lines Received</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Score_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Success Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBI__CommercialCreditScore__c</fullName>
        <label>D&amp;B Delinquency Score (Raw)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Commercial_Credit_Score_Class__c</fullName>
        <label>D&amp;B Delinquency Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Commercial_Credit_Score_Percentiles__c</fullName>
        <label>D&amp;B Delinquency Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Address__c</fullName>
        <label>D&amp;B Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Avg_High_Credit__c</fullName>
        <label>D&amp;B Avg High Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_City__c</fullName>
        <label>D&amp;B City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Country__c</fullName>
        <label>D&amp;B Country/Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_High_Credit__c</fullName>
        <label>D&amp;B High Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_State_Province__c</fullName>
        <label>D&amp;B State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__D_B_Zip_Postal_Code__c</fullName>
        <label>D&amp;B Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_Created_Date__c</fullName>
        <label>Application Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_ID__c</fullName>
        <label>D&amp;B Application ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Application_Modified_Date__c</fullName>
        <label>Application Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Company_Name__c</fullName>
        <label>D&amp;B Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Credit_Limit__c</fullName>
        <label>Recommended Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Credit_Term_Status__c</fullName>
        <label>Credit Terms Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_DUNS_NO__c</fullName>
        <label>D&amp;B DUNS Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Early_Payment_Discount__c</fullName>
        <label>Early Payment Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Requested_Amount__c</fullName>
        <label>Credit Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNBI__DnB_Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Employees__c</fullName>
        <label>D&amp;B Employees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Financial_Stress_Score_Class__c</fullName>
        <label>D&amp;B Failure Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Financial_Stress_Score_Percentile__c</fullName>
        <label>D&amp;B Failure Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Financial_Stress_Score__c</fullName>
        <label>D&amp;B Failure Score (Raw)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__PAYDEX__c</fullName>
        <label>D&amp;B PAYDEX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Primary_NAICS__c</fullName>
        <label>D&amp;B Primary NAICS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Primary_SIC__c</fullName>
        <label>D&amp;B Primary SIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Rating__c</fullName>
        <label>D&amp;B Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Company_Profile__c</fullName>
        <label>D&amp;B Viability - Company Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Data_Depth_Indicator__c</fullName>
        <label>D&amp;B Viability - Data Depth Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Portfolio_Comparison__c</fullName>
        <label>D&amp;B Viability - Portfolio Comparison</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Rating__c</fullName>
        <label>D&amp;B Viability Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Viability_Viability_Score__c</fullName>
        <label>D&amp;B Viability - Viability Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI__Years_in_Business__c</fullName>
        <label>D&amp;B Years in Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__AOS_DistID_Cleared__c</fullName>
        <label>AOS DistID Cleared</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__AOS_Error__c</fullName>
        <label>AOS Error</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__AOS_Results__c</fullName>
        <label>AOS Results</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__AOS_String__c</fullName>
        <label>AOS String</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Add_IM_Date__c</fullName>
        <label>Address Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Add_IM_Status__c</fullName>
        <label>Address Resolution Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Address_Risk_Country_Status__c</fullName>
        <defaultValue>&apos;Pending&apos;</defaultValue>
        <label>Address Risk Country Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Address_Screening_Date__c</fullName>
        <label>Address Screening Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Address_Screening_Status__c</fullName>
        <defaultValue>&apos;Pending&apos;</defaultValue>
        <label>Address Screening Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Compliance_History__c</fullName>
        <label>Compliance History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__Distributed_ID__c</fullName>
        <label>Distributed ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>